syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ChatV1 {
    rpc CreateChat(google.protobuf.Empty) returns (CreateChatRespons);
    rpc ConnectChat(ConnectChatRequest) returns (stream Message);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Message {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp created_at = 3;
}

message CreateChatRespons {
    string char_id = 1;
}

message ConnectChatRequest {
    string chat_id = 1;
    string username = 2;
}

message SendMessageRequest {
    string chat_id = 1;
    Message message = 2;
}